[package]
name = "rlw-examples"
version = "0.1.0"
edition = "2021"
authors = ["Jayden Elliott <jayden.elliott@outlook.com>"]

[[bin]]
name = "rlw-client"
path = "client/main.rs"

[[bin]]
name = "rlw-server"
path = "server/main.rs"

[dependencies]
tonic = {version = "0.6.2", features = ["transport", "tls" , "tls-roots"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "sync"] } 

[build-dependencies]
tonic-build = "0.6.0"
