[package]
name = "rlw-examples"
version = "0.1.0"
edition = "2021"
authors = ["Jayden Elliott <jayden.elliott@outlook.com>"]

[[bin]]
name = "rlw-client"
path = "client/main.rs"

[[bin]]
name = "rlw-server"
path = "server/main.rs"

[dependencies]
rlw = {path = "../lib"}
tonic = {version = "0.6.2", features = ["transport", "tls" , "tls-roots"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "sync", "fs"] } 
structopt = "0.3.26"
prost = "0.9"
rustls-pemfile = "0.3.0"
tokio-rustls = "0.15.0"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.6.0"
